...
                    IconButton(onClick = onBack) {
                        Icon(Icons.Outlined.ArrowBack, contentDescription = "Назад")
                    }
                },
                title = {
                    Column {
                        Text("Корзина", fontWeight = FontWeight.SemiBold)
                        Text(
                            if (selectedItems.isEmpty()) {
                                "${items.size} объектов"
                            } else {
                                "${selectedItems.size} выбрано"
                            },
...
